fix spacing

--- a/static/style.css
+++ b/static/style.css
@@ -60,9 +60,9 @@ h1 {
 
 .content {
     position: relative;
+    margin-top: 10%;
     z-index: 1;
     padding: 25px;
-    margin: 25px;
     font-weight: bold;
     color: #1f1e1e;
     background-color: rgba(242, 242, 242, 0.3);
